--- a/testapp/Makefile
+++ b/testapp/Makefile
@@ -1,13 +1,19 @@
 CXX := g++
 CXXFLAGS := -O2 -Wall -Wextra
-CXXINCLUDES := -I ../engine/
+CXXINCLUDES := -I../engine/ -I../engine/include/
 LDLIBS := -lhephaestus
 LDFLAGS := -L../engine/build/lib/
 
-app.bin: app.cpp
+TARGET := build/app.bin
+
+$(TARGET): app.cpp
+	@mkdir -p $(dir $@)
 	$(CXX) $(CXXFLAGS) $(CXXINCLUDES) $(LDFLAGS) $^ -o $@ $(LDLIBS)
 
-.PHONY: clean
+.PHONY: run clean
+run: $(TARGET)
+	@./$(TARGET)
+
 clean:
-	-rm *.bin *.o build/
+	-rm -r *.bin *.o build/
 
