--- a/engine/vulkan_plugin/Makefile
+++ b/engine/vulkan_plugin/Makefile
@@ -1,11 +1,12 @@
 include ../config.mk
 
 SOURCE_FILES := $(wildcard *.cpp)
+HEADER_FILES := $(wildcard *.hpp)
 OBJECT_FILES := $(patsubst %.cpp,../build/obj/%.o,$(notdir $(SOURCE_FILES)))
 
 all: $(OBJECT_FILES)
 
-$(OBJECT_FILES): $(SOURCE_FILES)
+$(OBJECT_FILES): $(SOURCE_FILES) $(HEADER_FILES)
 	@mkdir -p $(dir $@)
 	$(CXX) $(CXXFLAGS) -c $(patsubst %.o,%.cpp,$(notdir $@)) -o $@
 
