--- a/testapp/Makefile
+++ b/testapp/Makefile
@@ -8,14 +8,16 @@ TARGET := build/app.bin
 
 all: $(TARGET)
 
+.PHONY: $(TARGET)
 $(TARGET): app.cpp
 	@mkdir -p $(dir $@)
 	$(CXX) $(CXXFLAGS) $(CXXINCLUDES) $(LDFLAGS) $^ -o $@ $(LDLIBS)
 
-.PHONY: run clean $(TARGET)
+.PHONY: run
 run: $(TARGET)
 	@./$(TARGET)
 
+.PHONY: clean
 clean:
 	-rm -r *.bin *.o build/
 
