--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,31 @@
-.__pycache__/
-.vscode/
-
-temp/
-build/
-
+# Build files
+*.o
 *.bin
 *.out
-*.o
 *.spv
-*.old
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# dotenv environment variables file
+.envrc
+.env
+.env.test
+.env.production
+
+# Other
+note.*
+now.*
+*.old
+*.note
