--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,5 +57,5 @@ target_link_libraries(${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME} PROPERTIES 
   RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR} 
-  OUTPUT_NAME ${PROJECT_NAME}.bin
+  OUTPUT_NAME app.bin
 )
