--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Default to release build
 # if(NOT CMAKE_BUILD_TYPE)
-#     set(CMAKE_BUILD_TYPE Release)
+#   set(CMAKE_BUILD_TYPE release)
+# endif()
+
+# if(CMAKE_BUILD_TYPE STREQUAL "release")
+#     add_definitions(-DNDEBUG)
 # endif()
 
 # Download git submodules
