GLFW dont build unused things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,10 @@ endif()
 
 find_package(Vulkan REQUIRED)
 
+set(GLFW_BUILD_EXAMPLES OFF)
+set(GLFW_BUILD_TESTS OFF)
+set(GLFW_BUILD_DOCS OFF)
+
 add_subdirectory(external/glfw)
 add_subdirectory(external/glm)
 
