--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate release tag
+        id: generate_release_tag
+        uses: amitsingh-007/next-release-tag@v5.1.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: "v"
+          tag_template: "yyyy.mm.dd.i"
 
       - name: Prepare Vulkan SDK
         uses: humbletim/setup-vulkan-sdk@v1.2.1
@@ -28,3 +34,8 @@ jobs:
           echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
           echo "VULKAN_SDK=='$VULKAN_SDK'"
           glslangValidator --version
+
+      # - name: Create release
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     tag: ${{ steps.generate_release_tag.outputs.next_release_tag }}
