--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libxinerama-dev
+          sudo apt-get install -y libxinerama-dev libxcursor-dev libxxf86vm-dev libxi-dev
       
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
