--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,46 +103,6 @@ endif()
 # 5. Store source files
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
-# 6. Store shader files and define build rules
-find_program(GLSL_VALIDATOR glslangValidator HINTS 
-  ${Vulkan_GLSLANG_VALIDATOR_EXECUTABLE}
-  /usr/bin 
-  /usr/local/bin 
-  ${VULKAN_SDK_PATH}/Bin
-  ${VULKAN_SDK_PATH}/Bin32
-  ${VULKAN_SDK}/Bin
-  ${VULKAN_SDK}/Bin32
-)
-if(NOT GLSL_VALIDATOR)
-  message(FATAL_ERROR "glslangValidator not found. Install Vulkan SDK or provide it in PATH.")
-endif()
-
-file(GLOB_RECURSE GLSL_SOURCE_FILES
-  "${PROJECT_SOURCE_DIR}/shaders/*.frag"
-  "${PROJECT_SOURCE_DIR}/shaders/*.vert"
-)
-
-set(SHADER_DIR shaders)
-set(SHADER_OUTPUT_DIR ${CMAKE_BINARY_DIR}/${SHADER_DIR})
-
-foreach(GLSL ${GLSL_SOURCE_FILES})
-  get_filename_component(FILE_NAME ${GLSL} NAME)
-  set(SPIRV "${SHADER_OUTPUT_DIR}/${FILE_NAME}.spv")
-  add_custom_command(
-    OUTPUT ${SPIRV}
-    COMMAND ${CMAKE_COMMAND} -E make_directory ${SHADER_OUTPUT_DIR}
-    COMMAND ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}
-    DEPENDS ${GLSL})
-  list(APPEND SPIRV_BINARY_FILES ${SPIRV})
-endforeach(GLSL)
-
-add_custom_target(
-  ${SHADER_DIR}
-  DEPENDS ${SPIRV_BINARY_FILES}
-)
-
-# Define Executable
-
 # Platform specific
 if(UNIX AND NOT APPLE)  # Linux
   message(STATUS "Creating build for linux")
@@ -194,12 +154,13 @@ elseif(WIN32)  # Windows
     imgui
   )
 
-  set_target_properties(${PROJECT_NAME} PROPERTIES 
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} 
-    OUTPUT_NAME app
+  set_target_properties(${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    OUTPUT_NAME hephaestus
+    WINDOWS_EXPORT_ALL_SYMBOLS ON 
   )
 endif()
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/build")
-add_dependencies(${PROJECT_NAME} ${SHADER_DIR})
