--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,4 +1,4 @@
-name: Build for Linux
+name: Build for Windows
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
           Compress-Archive -Path "$OutputDir" -DestinationPath "hephaestus-windows-${{ github.run_id }}.zip"
 
       - name: Upload Engine Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: engine-windows
           path: hephaestus-windows-*.tar.gz
