--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Prepare MSVC Environment
-        uses: actions/setup-msvc@v2
+        uses: TheMrMilchmann/setup-msvc-dev@v3
         with:
-          vs_version: 2022
+          arch: x64
 
       - name: Prepare Vulkan SDK
         uses: humbletim/setup-vulkan-sdk@v1.2.1
