build to release

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
         with:
-          cmake_args: -DCMAKE_BUILD_TYPE=Release
+          options: |
+            CMAKE_BUILD_TYPE=Release
 
       - name: Check Project Build
         shell: powershell
