Build for Release

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,7 +28,10 @@ jobs:
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
         with:
-          options: -DCMAKE_BUILD_TYPE=Release
+          options: |
+            CMAKE_BUILD_TYPE=Release
+          build_args: |
+            --config Release
 
       - name: Check Project Build
         shell: powershell
