--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,13 +2,12 @@ name: Create Release
 
 on:
   workflow_run:
-    workflows: ["Build Linux", "Build Windows"]
+    workflows: ["Build for Linux", "Build for Windows"]
     types: [completed]
 
 jobs:
   create-release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-windows]
 
     steps:
       - name: Checkout code
@@ -37,6 +36,15 @@ jobs:
             echo "FINAL_TAG=${{ steps.generate_next_tag.outputs.next_release_tag }}" >> $GITHUB_OUTPUT
           fi
 
+      - name: Determine Prerelease
+        id: prerelease_check
+        run: |
+          if [[ "${{ startsWith(github.ref, 'refs/heads/dev') }}" == "true" || "${{ contains(github.ref, '-alpha') }}" == "true" || "${{ contains(github.ref, '-beta') }}" == "true" ]]; then
+            echo "PRERELEASE=true" >> $GITHUB_OUTPUT
+          else
+            echo "PRERELEASE=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Download Linux Artifact
         uses: actions/download-artifact@v3
         with:
@@ -55,4 +63,4 @@ jobs:
             ./engine-linux/hephaestus-linux-*.tar.gz
             ./engine-windows/hephaestus-windows-*.zip
           draft: false
-          prerelease: ${{ github.event.workflow_run.inputs.prerelease || startsWith(github.ref, 'refs/heads/dev') || contains(github.ref, '-alpha') || contains(github.ref, '-beta') }}
+          prerelease: ${{ steps.prerelease_check.outputs.PRERELEASE }}
