--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,7 +2,8 @@ name: Build for Windows
 
 on:
   push:
-    branches: [main, dev]
+    branches:
+      - main
     tags: ["v*.*.*", "v*.*.*.*"]
 
 jobs:
