--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,6 @@
     "editor.formatOnSave": true
   },
   "C_Cpp.default.includePath": [
-    "/usr/include/c++/10",
     "/usr/include",
     "/usr/local/include",
     "${workspaceFolder}/src"
@@ -110,9 +109,32 @@
     "typeindex": "cpp"
   },
   "files.exclude": {
-    "**/build": true
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/build": true,
+    "**/external/glfw/src/**": true,
+    "**/external/imgui/examples/**": true,
+    "**/external/**/tests/**": true,
+    "**/external/**/docs/**": true,
+    "**/external/**/tools/**": true,
+    "**/external/**/benchmarks/**": true
   },
   "search.exclude": {
-    "**/build": true
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/build": true,
+    "**/external/**": true
+  },
+  "C_Cpp.exclusionPolicy": "checkFilesAndFolders",
+  "files.watcherExclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.hg/store/**": true,
+    "**/build/**": true,
+    "**/external/**": true
   }
 }
