cmake optimize and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.22.2)
 
 set(NAME hephaestus)
-set(CMAKE_BUILD_TYPE Release)
 
 project(${NAME} VERSION 0.0.0)
 
@@ -10,14 +9,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Default to release build
-# if(NOT CMAKE_BUILD_TYPE)
-#   set(CMAKE_BUILD_TYPE release)
-# endif()
+if(NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
+  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
+endif()
 
-# if(CMAKE_BUILD_TYPE STREQUAL "release")
-#     add_definitions(-DNDEBUG)
-# endif()
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  message(STATUS "Debug build: enabling debug logging")
+else()
+  add_compile_definitions(NDEBUG)
+endif()
 
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries" FORCE)
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
@@ -57,49 +57,16 @@ else()
 	message(STATUS "Using vulkan lib at: ${Vulkan_LIBRARIES}")
 endif()
 
-# 2. GLFW (static link)
-option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
-option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
-option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
-option(GLFW_INSTALL "Generate installation target" OFF)
-option(GLFW_DOCUMENT_INTERNALS "Include internals in documentation" OFF)
-set(GLFW_VULKAN_STATIC ON CACHE BOOL "Link Vulkan statically with GLFW" FORCE)
-add_subdirectory(external/glfw)
-set(GLFW_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/external/glfw/include")
-set(GLFW_LIBRARIES glfw)
+add_subdirectory(external)
 
-# 3. GLM (static link)
-add_subdirectory(external/glm)
-set(GLM_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/external/glm/include")
-set(GLM_LIBRARIES glm)
+add_library(deps INTERFACE)
 
-# 4. imgui (static link)
-set(IMGUI_DIR ${PROJECT_SOURCE_DIR}/external/imgui)
-add_library(imgui STATIC
-  ${IMGUI_DIR}/imgui.cpp
-  ${IMGUI_DIR}/imgui_draw.cpp
-  ${IMGUI_DIR}/imgui_demo.cpp   # remove this 
-  ${IMGUI_DIR}/imgui_tables.cpp
-  ${IMGUI_DIR}/imgui_widgets.cpp
-  ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
-  ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp
-)
-
-target_include_directories(imgui PUBLIC
-  ${IMGUI_DIR}
-  ${IMGUI_DIR}/backends
-  ${GLFW_INCLUDE_DIRS}
-  ${Vulkan_INCLUDE_DIRS}
-)
-
-target_link_libraries(imgui PUBLIC
-  ${GLFW_LIBRARIES}
+target_link_libraries(deps INTERFACE
   ${Vulkan_LIBRARIES}
+  glfw
+  glm
+  imgui
 )
-
-if(UNIX AND NOT APPLE)
-  target_compile_options(imgui PRIVATE -fPIC)
-endif()
 
 # 5. Store source files
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
@@ -109,21 +76,14 @@ if(UNIX AND NOT APPLE)  # Linux
   message(STATUS "Creating build for linux")
 
   add_library(${PROJECT_NAME} SHARED ${SOURCES})
-
+  
   target_include_directories(${PROJECT_NAME} PRIVATE
     ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/include
-    ${GLFW_INCLUDE_DIRS}
-    ${GLM_INCLUDE_DIRS}
-    ${IMGUI_DIR}
-    ${IMGUI_DIR}/backends
   )
 
   target_link_libraries(${PROJECT_NAME} PRIVATE
-    ${GLFW_LIBRARIES}
-    ${GLM_LIBRARIES}
-    ${Vulkan_LIBRARIES}
-    imgui
+    deps
     dl
   )
 
@@ -142,17 +102,10 @@ elseif(WIN32)  # Windows
   target_include_directories(${PROJECT_NAME} PRIVATE
     ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/include
-    ${GLFW_INCLUDE_DIRS}
-    ${GLM_INCLUDE_DIRS}
-    ${IMGUI_DIR}
-    ${IMGUI_DIR}/backends
   )
 
   target_link_libraries(${PROJECT_NAME} PRIVATE
-    ${GLFW_LIBRARIES}
-    ${GLM_LIBRARIES}
-    ${Vulkan_LIBRARIES}
-    imgui
+    deps
   )
 
   set_target_properties(${PROJECT_NAME} PROPERTIES
