--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -14,6 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Cache Git Submodules (External Dependencies)
+        id: cache-submodules
+        uses: actions/cache@v4
+        with:
+          path: external
+          key: ${{ runner.os }}-submodules-${{ hashFiles('external/**/CMakeLists.txt', '.gitmodules') }}
+          restore-keys: |
+            ${{ runner.os }}-submodules-
+
       - name: Generate Next Release Tag
         id: generate_next_tag
         uses: amitsingh-007/next-release-tag@v5.1.0
